--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,10 @@
 server:
   port: 9090
+  ssl:
+    key-store: classpath:keystore.jks
+    key-store-password: kurento
+    key-store-type: JKS
+    key-alias: kurento-selfsigned
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/dietPlan?serverTimezone=UTC
@@ -12,7 +17,25 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        # OUTPUT
+        # Terminal color output; one of [ALWAYS, DETECT, NEVER]
+  output:
+    ansi:
+      enable: DETECT
   security:
     user:
       name: admin
       password: admin
+
+      # BANNER
+banner:
+  location: classpath:banner.txt
+
+      # LOGGING
+logging:
+  level:
+    root: INFO
+    org:
+      apache: WARN
+      springframework: WARN
+      kurento: INFO
