--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
 			<version>7.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
