--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,11 +12,13 @@ spring:
     password: coderslab
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+#      dialect: org.hibernate.dialect.MySQL5Dialect
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
 logging:
   level:
     root: INFO
