--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,33 +1,32 @@
-version: "3"
+version: '3'
 services:
   my-app:
     image: registry.gitlab.com/karolinawisniewska/dockertest/java/allyouneedisdietplan:v1
+    restart: always
     ports:
       - "9090:9090"
-    networks:
-      - springapimysql-net
     environment:
       - spring.datasource.url=jdbc:mysql://mysqldb:3306/dietPlan?serverTimezone=UTC
     depends_on:
       - mysqldb
       - kurento
-
     volumes:
       - .m2:/root/.m2
 
   mysqldb:
-    image: "mysql:8.0"
+    image: mysql:8.0
     restart: always
     ports:
-      - "3307:3307"
-    networks:
-      - springapimysql-net
+      - "3307:3306"
     environment:
       MYSQL_DATABASE: dietPlan
+      MYSQL_USER: exampleuser
+      MYSQL_PASSWORD: examplepass
       MYSQL_ROOT_PASSWORD: coderslab
 
   kurento:
     image: kurento/kurento-media-server:7.0.0
+    restart: always
     expose:
       - "8888"
     ports:
@@ -36,5 +35,3 @@ services:
       - default
     container_name: kurento
 
-networks:
-  springapimysql-net:
