--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,6 @@
 version: "3.2"
 services:
   my-app:
-#    build: .
     image: registry.gitlab.com/karolinawisniewska/dockertest/java/allyouneedisdietplan:v2
     restart: always
     container_name: my-app
@@ -22,17 +21,17 @@ services:
     cap_add:
       - SYS_NICE
     container_name: db
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
       MYSQL_DATABASE: dietPlan
       MYSQL_ROOT_PASSWORD: coderslab
-      MYSQL_USER: user
-      MYSQL_PASSWORD: user
     ports:
       - "3307:3306"
     volumes:
-      - db:/var/lib/mysql/
-      - ./init/import.sql:/docker-entrypoint-initdb.d/import.sql
+      - db-data:/var/lib/mysql/
+      - ./init/schema.sql:/docker-entrypoint-initdb.d/1.sql
+      - ./init/data.sql:/docker-entrypoint-initdb.d/2.sql
 
   kurento:
     image: kurento/kurento-media-server:7.0.0
@@ -44,5 +43,5 @@ services:
     container_name: kurento
 
 volumes:
-  db:
+  db-data:
     driver: local
