--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ server:
     key-alias: kurento-selfsigned
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/dietPlan?serverTimezone=UTC
+    url: jdbc:mysql://${MYSQL_HOST}:3306/dietPlan?serverTimezone=UTC
     username: root
     password: coderslab
   jpa:
@@ -38,9 +38,9 @@ edamam:
     - name: type
       value: public
     - name: app_id
-      value: 40fa347c
+      value: ${APP_ID}
     - name: app_key
-      value: 0eb977d62e50265cf4df0451172393a6
+      value: ${APP_KEY}
     - name: random
       value: true
   fields:
